pkg/rancher-desktop/assets/scripts/rancher-manager-envoy.yaml
# yaml-language-server: $schema=https://github.com/jcchavezs/envoy-config-schema/releases/download/v1.21.0/v3_Bootstrap.json
---
static_resources:
  listeners:
  - name: tls-termination
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 9443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: rancher_manager
          upgrade_configs:
          - upgrade_type: websocket
          route_config:
            name: route
            virtual_hosts:
            - name: app
              domains: [ "*" ]
              routes:
              - match: { prefix: / }
                route:
                  cluster: rancher-manager
                  host_rewrite_literal: localhost
                  append_x_forwarded_host: true
            request_headers_to_add:
            - header: { key: X-Forwarded-Proto, value: https }
              append_action: OVERWRITE_IF_EXISTS_OR_ADD
            - header: { key: X-Forwarded-Port, value: '443' }
              append_action: OVERWRITE_IF_EXISTS_OR_ADD
            - header: { key: X-Forwarded-For, value: '192.0.2.1' }
              append_action: OVERWRITE_IF_EXISTS_OR_ADD
            - header: { key: Origin, value: 'https://localhost' }
              append_action: OVERWRITE_IF_EXISTS_OR_ADD
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            # openssl req -x509 -newkey rsa:2048 -keyout key.pem -out crt.pem
            # -days 36500 -nodes -subj '/CN=rancher-manager-https-termination'
            # Per CA/B BR 6.1.5 RSA keys are a minimum of 2048 bits; and ECDSA
            # keys must be ST P‐256, NIST P‐384 or NIST P‐521.
            - certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIIDOzCCAiOgAwIBAgIUA4weh/2CMM0zwHuSIhkbaFEvqRMwDQYJKoZIhvcNAQEL
[...]
                  682jYqxqLq+/OKsX+6Ul
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN PRIVATE KEY-----
                  MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQDbpo3Nvrvi6Ev5
[...]
                  Sibf5N6AjHN4gWm/gCnn2nw=
                  -----END PRIVATE KEY-----
  clusters:
  - name: rancher-manager
    type: STRICT_DNS
    load_assignment:
      cluster_name: rancher-manager
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: rancher-manager.cattle-system.svc
                port_value: 80
    health_checks:
    - timeout: 1s
      interval: 30s
      unhealthy_threshold: 5
      healthy_threshold: 1
      http_health_check:
        host: localhost
        path: /healthz
