pkg/rancher-desktop/assets/scripts/spin-operator.yaml
---
apiVersion: core.spinoperator.dev/v1alpha1
kind: SpinAppExecutor
metadata:
  name: containerd-shim-spin
spec:
  createDeployment: true
  deploymentConfig:
    runtimeClassName: spin
---
apiVersion: v1
kind: Namespace
metadata:
  name: spin-operator
---
apiVersion: helm.cattle.io/v1
kind: HelmChart
metadata:
  name: spin-operator
  namespace: kube-system
spec:
  chart: "https://%{KUBERNETES_API}%/static/rancher-desktop/spin-operator.tgz"
  targetNamespace: spin-operator
  # Old versions of the helm-controller don't support createNamespace, so we
  # created the namespace ourselves.
  createNamespace: false
